--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps');
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script');
 .App {
   text-align: center;
+  font-family: Monterrat;
+}
+h1, p{
+  margin: 0;
 }
 
