finished homepage component

--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,12 @@ h1, p{
   margin: 0;
 }
 
-a{
+/* a{
   text-decoration: none;
   color: black;
   padding-left: 10px;
   border-left: 2px solid lightgray;
-}
+} */
 
 li{
   text-align: left;
